--- a/ckanext/multilinguality/theme/public/resource.config
+++ b/ckanext/multilinguality/theme/public/resource.config
@@ -14,21 +14,14 @@ main = base/main
 
 [groups]
 
-main =
+read =
     vendor/underscore/1.4.2/underscore.js
     vendor/backbone/0.9.2/backbone.js
     vendor/mustache/0.5.0-dev/mustache.js
     vendor/bootstrap/2.0.2/bootstrap.js
     vendor/json/json2.js
-    vendor/flot/excanvas.js
-    vendor/flot/jquery.flot.js
-    vendor/leaflet/0.4.4/leaflet.js
-    vendor/leaflet.markercluster/leaflet.markercluster.js
     vendor/slickgrid/jquery-ui-1.8.16.custom.js
     vendor/slickgrid/jquery.event.drag-2.2.js
-    vendor/slickgrid/plugins/slick.cellrangedecorator.js
-    vendor/slickgrid/plugins/slick.cellselectionmodel.js
-    vendor/slickgrid/plugins/slick.cellrangeselector.js
 
     vendor/slickgrid/slick.core.js
     vendor/slickgrid/slick.grid.js
@@ -37,19 +30,41 @@ main =
     vendor/moment/1.6.2/moment.js
 
     vendor/recline/recline.js
-
-    preview_recline.js
+    ckan_custom_read.js
     translate_helpers.js
+    preview_recline_read.js
 
     vendor/bootstrap/2.0.2/css/bootstrap.css
-    vendor/leaflet/0.4.4/leaflet.css
-    vendor/leaflet/0.4.4/leaflet.ie.css
-    vendor/leaflet.markercluster/MarkerCluster.css
-    vendor/leaflet.markercluster/MarkerCluster.Default.css
-    vendor/leaflet.markercluster/MarkerCluster.Default.ie.css
     vendor/slickgrid/slick.grid.css
     vendor/recline/recline.css
 
     css/recline.css
 
+    
+edit = 
+    vendor/underscore/1.4.2/underscore.js
+    vendor/backbone/0.9.2/backbone.js
+    vendor/mustache/0.5.0-dev/mustache.js
+    vendor/bootstrap/2.0.2/bootstrap.js
+    vendor/json/json2.js
+    vendor/slickgrid/jquery-ui-1.8.16.custom.js
+    vendor/slickgrid/jquery.event.drag-2.2.js
+
+    vendor/slickgrid/slick.core.js
+    vendor/slickgrid/slick.grid.js
+    vendor/slickgrid/slick.formatters.js
+    vendor/slickgrid/slick.editors.js
+    vendor/moment/1.6.2/moment.js
+
+    vendor/recline/recline_edit.js
     ckan_custom_edit.js
+    translate_helpers.js
+    preview_recline_edit.js
+
+    vendor/bootstrap/2.0.2/css/bootstrap.css
+    vendor/slickgrid/slick.grid.css
+    vendor/recline/recline.css
+
+    css/recline.css
+    
+
