several improvements/enhancements in backend & frontend

--- a/ckanext/multilinguality/theme/public/resource.config
+++ b/ckanext/multilinguality/theme/public/resource.config
@@ -55,8 +55,9 @@ edit =
     vendor/slickgrid/slick.formatters.js
     vendor/slickgrid/slick.editors.js
     vendor/moment/1.6.2/moment.js
-
     vendor/recline/recline_edit.js
+
+    slickgrid_custom_columnpicker.js
     ckan_custom_edit.js
     translate_helpers.js
     preview_recline_edit.js
