cleaned up code and fixed several bugs

--- a/ckanext/multilinguality/theme/public/resource.config
+++ b/ckanext/multilinguality/theme/public/resource.config
@@ -22,6 +22,11 @@ read =
     vendor/json/json2.js
     vendor/slickgrid/jquery-ui-1.8.16.custom.js
     vendor/slickgrid/jquery.event.drag-2.2.js
+    vendor/leaflet/0.4.4/leaflet.js
+    vendor/leaflet/0.4.4/leaflet.css
+    vendor/leaflet.markercluster/leaflet.markercluster.js
+    vendor/leaflet.markercluster/MarkerCluster.css
+    vendor/flot/jquery.flot.js
 
     vendor/slickgrid/slick.core.js
     vendor/slickgrid/slick.grid.js
@@ -54,6 +59,10 @@ edit =
     vendor/slickgrid/slick.grid.js
     vendor/slickgrid/slick.formatters.js
     vendor/slickgrid/slick.editors.js
+    vendor/slickgrid/plugins/slick.cellselectionmodel.js
+    vendor/slickgrid/plugins/slick.cellrangeselector.js
+    vendor/slickgrid/plugins/slick.cellrangedecorator.js
+    vendor/slickgrid/plugins/slick.cellexternalcopymanager.js
     vendor/moment/1.6.2/moment.js
     vendor/recline/recline_edit.js
 
